templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-helloworld-service
  labels:
    app: spring-helloworld
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: spring-helloworld
